<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gallery.RegistroFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="78dp"
                android:layout_marginEnd="28dp"

                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#FF9800"
                app:hintTextColor="#FF9800"
                app:layout_constraintBottom_toTopOf="@+id/guideline8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/guideline9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.615"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/txtUser"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:autofillHints="no"
                    android:hint="@string/txt_user"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="75dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="78dp"
                android:layout_marginEnd="28dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#FF9800"
                app:hintTextColor="#FF9800"
                app:layout_constraintBottom_toTopOf="@+id/guideline10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline8"
                app:layout_constraintVertical_bias="0.588"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:autofillHints="no"
                    android:hint="@string/txt_nombre"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="75dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="78dp"
                android:layout_marginEnd="28dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#FF9800"
                app:hintTextColor="#FF9800"
                app:layout_constraintBottom_toTopOf="@+id/guideline14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/guideline14"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintVertical_bias="0.941"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/txtAp"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:autofillHints="no"
                    android:hint="@string/txt_ap"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="75dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="78dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#FF9800"
                app:hintTextColor="#FF9800"
                app:layout_constraintBottom_toTopOf="@+id/guideline12"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline14"
                app:layout_constraintVertical_bias="0.125"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/txtAm"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:autofillHints="no"
                    android:hint="@string/txt_am"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="75dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="78dp"
                android:layout_marginEnd="28dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#FF9800"
                app:hintTextColor="#FF9800"
                app:layout_constraintBottom_toTopOf="@+id/guideline13"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/guideline13"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline12"
                app:layout_constraintVertical_bias="0.538"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:autofillHints="no"
                    android:hint="@string/txt_email"
                    android:inputType="textEmailAddress"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="75dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout6"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="78dp"
                android:layout_marginEnd="28dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#FF9800"
                app:hintTextColor="#FF9800"
                app:layout_constraintBottom_toTopOf="@+id/guideline11"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline13"
                app:layout_constraintVertical_bias="0.555"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/txtNac"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:autofillHints="no"
                    android:hint="@string/txt_nac"
                    android:inputType="text|datetime"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="75dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout8"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="78dp"
                android:layout_marginEnd="28dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#FF9800"
                app:hintTextColor="#FF9800"
                app:layout_constraintBottom_toTopOf="@+id/guideline15"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/guideline15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
                app:layout_constraintVertical_bias="0.647"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:autofillHints="no"
                    android:hint="@string/txt_password"
                    android:inputType="textPassword"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="75dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="350dp"
                android:layout_height="78dp"
                android:layout_marginEnd="28dp"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="#FF9800"
                app:hintTextColor="#FF9800"
                app:layout_constraintBottom_toTopOf="@+id/guideline16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/guideline16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline15"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/txtStatus"
                    android:layout_width="350dp"
                    android:layout_height="60dp"
                    android:autofillHints="no"
                    android:hint="@string/txt_status"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="25dp"
                    tools:layout_editor_absoluteY="75dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintGuide_begin="104dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout1"
                app:layout_constraintGuide_begin="16dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
                app:layout_constraintGuide_begin="165dp"
                app:layout_constraintStart_toEndOf="@+id/guideline8" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout6"
                app:layout_constraintGuide_begin="453dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/guideline13"
                app:layout_constraintGuide_begin="319dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout5"
                app:layout_constraintGuide_begin="384dp"
                app:layout_constraintStart_toEndOf="@+id/guideline12" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout3"
                app:layout_constraintGuide_begin="233dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout8"
                app:layout_constraintGuide_begin="518dp"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="28dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
                app:layout_constraintGuide_begin="591dp"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnAdd"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="140dp"
                android:layout_marginRight="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:text="@string/btn_add"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold|italic"
                app:layout_constraintBottom_toTopOf="@+id/guideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guideline6"
                app:rippleColor="#FF9800"
                app:strokeColor="#FF9800" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>



